--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --black-headline: #242325;
   --grey-bodycopy: #6b778c;
   --grey-inactive: #aeb5c1;
+  --grey-inactive-2: #d4d6da;
   --blue: #0165ff;
   --blue-light: #eaf2fe;
   --green: #47bf7c;
