--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,12 +1,21 @@
 .footer {
   align-items: center;
   justify-content: space-between;
+  flex-direction: column;
+  gap: 1rem;
   display: flex;
   padding-top: 1.6rem;
   font-size: 0.8rem;
   line-height: 1.2rem;
   font-weight: 500;
   color: var(--grey-bodycopy);
+}
+
+@media only screen and (min-width: 37.5em) {
+  .footer {
+    flex-direction: row;
+    gap: unset;
+  }
 }
 
 .footer__nav,
